# jumgfx

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c
src/: CMakeLists.txt  expression.c  expression.h  gl.c  gl.h  input.h  inputs.json  parse.c  skin.c  skin.h
test/: CMakeLists.txt  expression_tests.c  parse.c  skin.yaml  test.h  units.c
